# spore

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.e2e.yml
.claude/: settings.json  statusline-command.sh
.claude/agents/: architect.md  git-expert.md  implementer.md  quality.md
.claude/commands/: address-pr-comments.md  breakdown.md  commit.md  fix-issue.md  pr.md  reset.md  review.md  scaffold.md  security-scan.md  spec.md  squash-pr.md  work-merge.md  work.md
.claude/hooks/: format.sh  guard.sh  save-context.sh  stop-quality-gate.sh  task-summary.sh
.claude/rules/: api.md  frontend.md  general.md  security.md  testing.md
.claude/skills/triage/: SKILL.md
.claude/specs/issue-10/: add-echo-tool-to-workspace-members.md  create-echo-tool-crate-with-cargo-toml.md  implement-echo-tool-server.md  remove-tools-gitkeep.md  run-verification-suite.md  write-integration-test-for-mcp-server-round-trip.md  write-tool-readme.md  write-unit-tests-for-echo-tool-logic.md
.claude/specs/issue-11/: add-tracing-dependency-and-replace-println.md  create-config-module-for-environment-driven-settings.md  create-provider-module-for-llm-client-construction.md  implement-runtime-agent-struct-with-micro-agent-trait.md  refactor-main-rs-to-use-config-and-runtime-agent.md  run-verification-suite.md  write-integration-test-for-runtime-agent-construction.md  write-unit-tests-for-config-and-provider-modules.md
.claude/specs/issue-12/: add-axum-dependency-to-agent-runtime.md  create-apperror-wrapper-with-http-status-mapping.md  create-http-handler-module.md  run-verification-suite.md  wire-router-into-main-rs.md  write-handler-integration-tests.md
.claude/specs/issue-13/: add-action-disallowed-variant-to-agent-error.md  add-escalate-to-field-to-agent-response.md  filter-tools-by-allowed-actions.md  implement-constraint-enforcer.md  map-max-turns-error.md  run-verification-suite.md  set-default-max-turns-from-constraints.md  wire-constraint-enforcer-into-main.md  write-tests-for-allowed-actions-filtering.md  write-tests-for-constraint-enforcer.md  write-tests-for-max-turns-enforcement.md
.claude/specs/issue-14/: add-build-and-run-documentation.md  add-release-profile-optimizations.md  create-dockerignore-file.md  create-multi-stage-dockerfile.md  verify-image-builds-and-meets-size-target.md
.claude/specs/issue-15/: convert-orchestrator-from-binary-to-library-crate.md  define-orchestrator-error-enum.md  define-registry-config-format-and-loader.md  implement-agent-endpoint-struct.md  implement-micro-agent-for-orchestrator.md  implement-orchestrator-struct-with-dispatch-logic.md  run-verification-suite.md  update-orchestrator-cargo-toml-with-dependencies.md  write-unit-tests-for-agent-endpoint.md  write-unit-tests-for-config-loading.md  write-unit-tests-for-orchestrator-dispatch-and-routing.md  (+1 more)
.claude/tasks/: issue-10.md  issue-11.md  issue-12.md  issue-13.md  issue-14.md  issue-15.md  issue-16.md  issue-17.md  issue-18.md  issue-19.md  issue-2.md  issue-20.md  issue-21.md  issue-22.md  issue-3.md  issue-4.md  issue-44.md  issue-45.md  issue-46.md  issue-47.md  issue-48.md  issue-49.md  issue-5.md  issue-50.md  issue-51.md  issue-52.md  issue-56.md  issue-6.md  issue-7.md  issue-8.md  issue-9.md
.claude/work-sessions/: issue-2-group-4.json
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: config.rs  constraint_enforcer.rs  http.rs  lib.rs  main.rs  provider.rs  runtime_agent.rs  tool_bridge.rs
crates/agent-runtime/tests/: constraint_enforcer_test.rs  http_test.rs  runtime_agent_test.rs
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/src/: agent_error.rs  agent_request.rs  agent_response.rs  constraints.rs  health_status.rs  lib.rs  micro_agent.rs  model_config.rs  output_schema.rs  skill_manifest.rs  tool_call_record.rs
crates/agent-sdk/tests/: envelope_types_test.rs  micro_agent_test.rs  skill_manifest_test.rs
crates/mcp-test-utils/: Cargo.toml
crates/mcp-tool-harness/: Cargo.toml
crates/mcp-tool-harness/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agent_endpoint.rs  config.rs  error.rs  lib.rs  orchestrator.rs  semantic_router.rs
crates/orchestrator/tests/: agent_endpoint_test.rs  config_test.rs  error_test.rs  orchestrator_test.rs  semantic_router_test.rs
crates/skill-loader/: Cargo.toml
crates/skill-loader/src/: error.rs  frontmatter.rs  lib.rs  validation.rs
crates/skill-loader/tests/: example_skills_test.rs  skill_loader_test.rs  validation_integration_test.rs  validation_test.rs
crates/tool-registry/: Cargo.toml
crates/tool-registry/src/: lib.rs  mcp_handle.rs  registry_error.rs  tool_entry.rs  tool_registry.rs  transport.rs
crates/tool-registry/tests/: mcp_connection_test.rs  tool_entry_test.rs  tool_registry_test.rs
scripts/: e2e-test.sh
skills/: cogs-analyst.md  deploy-agent.md  echo.md  orchestrator.md  skill-writer.md  tool-coder.md
tests/: e2e_bootstrap_test.rs
tests/e2e/: SCENARIO.md  lib.sh  orchestrator-config.yml  validate_step1_skill.sh  validate_step2_tools.sh  validate_step3_deploy.sh  validate_step4_route.sh
tools/cargo-build/: Cargo.toml
tools/docker-build/: Cargo.toml  README.md
tools/docker-push/: Cargo.toml  README.md
tools/echo-tool/: Cargo.toml  README.md
tools/echo-tool/src/: echo.rs  main.rs
tools/echo-tool/tests/: echo_server_test.rs
tools/list-agents/: Cargo.toml  README.md
tools/read-file/: Cargo.toml  README.md
tools/read-file/src/: main.rs  read_file.rs
tools/read-file/tests/: read_file_server_test.rs
tools/register-agent/: Cargo.toml  README.md
tools/route-to-agent/: Cargo.toml  README.md
tools/route-to-agent/src/: main.rs  route_to_agent.rs
tools/route-to-agent/tests/: route_to_agent_server_test.rs
tools/validate-skill/: Cargo.toml  README.md
tools/validate-skill/src/: main.rs  validate_skill.rs
tools/validate-skill/tests/: validate_skill_server_test.rs
tools/write-file/: Cargo.toml  README.md
tools/write-file/src/: main.rs  write_file.rs
tools/write-file/tests/: write_file_server_test.rs
(+206 files in other folders)
