[package]
name = "spore"
version = "0.0.0"
edition = "2024"
publish = false

[features]
e2e = []

[workspace]
resolver = "2"
members = [
    "crates/agent-sdk",
    "crates/skill-loader",
    "crates/tool-registry",
    "crates/agent-runtime",
    "crates/orchestrator",
    "tools/echo-tool",
    "tools/read-file",
    "tools/write-file",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
