[package]
name = "spore"
version = "0.0.0"
edition = "2024"
publish = false

[features]
e2e = []

[workspace]
resolver = "2"
members = [
    "crates/agent-sdk",
    "crates/skill-loader",
    "crates/tool-registry",
    "crates/agent-runtime",
    "crates/mcp-tool-harness",
    "crates/orchestrator",
    "crates/mcp-test-utils",
    "tools/echo-tool",
    "tools/list-agents",
    "tools/read-file",
    "tools/register-agent",
    "tools/write-file",
    "tools/validate-skill",
    "tools/cargo-build",
    "tools/docker-push",
    "tools/docker-build",
    "tools/route-to-agent",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
