[package]
name = "agent-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["derive", "uuid1"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"

[dev-dependencies]
serde_yaml = "0.9"
