[package]
name = "mcp-tool-harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rmcp = { version = "1", features = ["transport-io", "server"] }
tokio = { version = "1", features = ["macros", "rt", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
