[package]
name = "tool-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["derive", "uuid1"] }
serde_json = "1"
agent-sdk = { path = "../agent-sdk" }
rmcp = { version = "0.16", features = ["client", "transport-async-rw"] }
tokio = { version = "1", features = ["net"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net"] }
rmcp = { version = "0.16", features = ["server", "transport-async-rw"] }
tempfile = "3"
